# python-media-downloader

./: CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  downloader_engine.py  pubspec.yaml
android/: build.gradle.kts  (+3 more)
python_engine/: README.md  pyproject.toml  requirements.txt
python_engine/mediahub_engine/: __init__.py  __main__.py  config.py  contracts.py  engine.py  engine_kinds.py
python_engine/mediahub_engine/database/: __init__.py  collections_repository.py  connection.py  credentials_repository.py  history_repository.py  media_repository.py  playlists_repository.py  scheduler_repository.py  schema.sql  settings_repository.py  task_repository.py
python_engine/mediahub_engine/download/: __init__.py  cancellation.py  manager.py  queue.py  recovery.py  retry.py  strategy.py  task.py
python_engine/mediahub_engine/ipc/: __init__.py  jsonrpc.py
python_engine/mediahub_engine/media/: __init__.py
python_engine/mediahub_engine/providers/: __init__.py  base.py  delegate.py  generic.py  registry.py  strategy.py
python_engine/mediahub_engine/storage/: __init__.py  analyzer.py  file_manager.py  models.py
python_engine/tests/: __init__.py  conftest.py  conftest_providers.py  test_backends.py  test_download_manager.py  test_engine_bootstrap.py  test_engine_methods.py  test_ipc_jsonrpc.py  test_manager_integration.py  test_persistence_recovery.py  test_phase4_engine_methods.py  test_phase4_file_manager.py  test_phase4_repositories.py  test_phase5_playlists.py  test_phase6_repositories.py  test_provider_registry.py  test_providers.py  test_retry_cancellation.py  test_task_fsm.py
(+108 files in other folders)
